# jiawei_deep_agents

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
examples/: 01_langgraph_basics.py  simple_agent.py
my_deepagents/: __init__.py  graph.py
my_deepagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_deepagents/backends/: __init__.py  composite.py  filesystem.py  protocol.py  state.py  store.py  utils.py
my_deepagents/middleware/: __init__.py  filesystem.py  patch_tool_calls.py  subagents.py
tests/integration_tests/: test_deepagents.py
